--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>GitHub</title>
 </head>
 <body>
-    <p>mon nouveau</p>
+    <p>HI I'm Amadou</p>
+    <h1>it 's my web</h1>
+    
 </body>
 </html>
