--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <p>HI I'm Amadou</p>
     <h1>it 's my web</h1>
+    <p>work</p>
+    <p>contact</p>
+    <p>about</p>
+    <p>nothing</p>
+    <p>ok</p>
     
 </body>
 </html>
